client/src/components/NodeView/NodeContent/RestaurantContent/RestaurantContent.scss
@import '../../../../global/globalCssVariables';

.restaurantContainer {
  padding: 20px;
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2, 1fr);

  .gridColOne {
    text-align: left;
    display: grid;
    grid-auto-rows: minmax(80px, auto);

    .itemOne {
      grid-row: 1;
    }

    .itemTwo {
      grid-row: 2;
    }

    .itemThree {
      grid-row: 3/5;

      .hoursContainer {
        text-decoration: none;
        list-style: none;

        li {
          padding: 0;
          display: grid;
          grid-template-columns: repeat(2, 22%);

          strong {
            font-weight: 700;
            font-style: bold;
            font-size: 15px;
          }
        }
      }
    }

    .itemFour {
      grid-row: 5;
    }
  }

  .gridColTwo {
    text-align: center;
    overflow: hidden;

    .sectionTitle {
      margin: auto;
      width: 80%;
      text-align: left;
    }

    .scrollable {
      max-height: 70vh;
      overflow: auto;
    }
  }

  .sectionTitle {
    font-weight: 700;
    font-style: bold;
    font-size: 30px;
    padding-bottom: 10px;
  }

  .sectionDivider {
    width: 100%;
    border-bottom: 1px solid rgba(0, 0, 0, 0.4);
  }
}

// Reviews
.reviewContainer {
  margin: auto;
  width: 80%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  border: 1px solid rgb(214, 214, 214);
  border-radius: 15px;
  margin-bottom: 20px;
  text-align: left;

  .reviewTitleBar {
    padding-left: 20px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 10px;
    height: 40px;
    border-bottom: 1px solid rgb(214, 214, 214);

    img {
      width: 25px;
      height: 25px;
    }
  }

  .reviewContent {
    padding: 10px 20px 0;
  }

  .reviewFooter {
    padding: 10px 20px 10px;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;

    p {
      font-size: 12px;
      color: rgb(120, 120, 120);
    }
  }
}

